# shoplist

./: .env.example  .gitignore  Makefile  docker-compose.yml
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  config.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt
api/src/application/dtos/: auth_dtos.py  category_dtos.py  checkout_dtos.py  inventory_dtos.py  item_dtos.py  shopping_list_dtos.py  stock_dtos.py  store_dtos.py
api/src/application/use_cases/auth/: login_user.py  refresh_token.py  register_user.py
api/src/application/use_cases/category/: create_category.py  delete_category.py  list_categories.py  update_category.py
api/src/domain/entities/: __init__.py  category.py  inventory.py  movement.py  pre_registered_item.py  shopping_list.py  shopping_list_item.py  stock.py  store.py  user.py
api/src/domain/interfaces/: auth_service.py  repository.py  unit_of_work.py
api/src/domain/value_objects/: __init__.py  email.py  price.py  unit.py
api/src/infrastructure/auth/: __init__.py  jwt_service.py  password_service.py
api/src/infrastructure/database/: config.py  unit_of_work.py
api/src/presentation/api/errors/: handlers.py
api/src/presentation/schemas/: auth_schemas.py  category_schemas.py  checkout_schemas.py  inventory_schemas.py  item_schemas.py  ocr_schemas.py  shopping_list_schemas.py  stock_schemas.py  store_schemas.py
api/tests/integration/: conftest.py  test_auth.py  test_categories.py  test_inventory.py  test_items.py  test_lists.py  test_ocr.py  test_stores.py
api/tests/unit/: test_entities.py  test_value_objects.py
(+112 files in other folders)
